<resources>
    <!-- App strings -->
    <string name="map_key" translatable="false">AIzaSyCl4vuQBpNKLArrqXhOPBUVDnYjmd-omus</string>

    <string name="app_name">farmlog</string>
    <string name="appTitle">FarmLog</string>
    <string name="action_settings">Nastavitve</string>
    <string name="madeBy">Razvil: Tim Rus</string>
    <string name="app_slogan">Hitro, pregledno in enostavno</string>

    <!-- LOGIN -->
    <string name="loginTitle">Prijava</string>
    <string name="loginButton">Prijavi se</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Geslo</string>
    <string name="login_signup_hint">Še nimaš računa? Registriraj se</string>
    <string name="login_remeber_me">Zapomni si me</string>

    <!-- REGISTER -->
    <string name="signup_title">Registracija</string>
    <string name="signup_subtitle1">Korak 1</string>
    <string name="signup_subtitle2">Korak 2</string>
    <string name="signup_subtitle3">Korak 3</string>
    <string name="signup_first_name_hint">Ime</string>
    <string name="signup_last_name_hint">Priimek</string>
    <string name="signup_email_hint">Email</string>
    <string name="signup_password_hint">Geslo</string>
    <string name="signup_passwordRepeat_hint">Ponovi geslo</string>
    <string name="signup_login_hint">Že imaš račun? Prijavi se</string>
    <string name="signup_address_hint">Naslov</string>
    <string name="signup_post_hint">Pošta</string>
    <string name="signup_zip_hint">Poštna številka</string>
    <string name="signup_GERK_hint">GERK MID</string>
    <string name="signup_registerButton1_hint">Naslednji korak</string>
    <string name="signup_registerButton2_hint">Registriraj se</string>

    <!-- Welcome text -->
    <string name="welcome_title">Dobrodošli v aplikaciji FarmLog!</string>
    <string name="welcome_subTitle">Hvala za vašo registracijo</string>
    <string name="welcome_description">Aplikacija je namenjena lažjemu arhiviranju in pregledovanju opravljenega dela na vaših zemljiščih.</string>
    <string name="welcome_button">Prijavi se</string>

    <!-- About text -->
    <string name="about_title">Aplikacija FarmLog</string>
    <string name="about_description">Prototip aplikacije je bil razvit za namen diplomske naloge na Fakulteti za računalništvo in informatiko v Ljubljani. Aplikacija je namenjena lažjemu arhiviranju in pregledovanju opravljenega dela na vaših zemljiščih.</string>
    <string name="back_to_application">Vrni se v aplikacijo</string>
    <string name="contact_info">Kontakt:  <a style='text-decoration:none' href="mailto:timrus.dev@gmail.com"><b>timrus.dev@gmail.com</b></a></string>
    <string name="about_made_by">Razvil:  <a style='text-decoration:none' href="https://tgitm.github.io/timrus"><b>Tim Rus</b></a></string>

    <!-- Top bar text -->
    <string name="menuText">MENI</string>
    <string name="archiveText">ARHIV</string>
    <string name="map_screen_title">Moja zemljišča</string>

    <!-- Navigation menu items-->
    <string name="to_map">Zemljevid zemljišč</string>
    <string name="archive">Arhiv opravil</string>
    <string name="add_new_work">Dodaj opravilo</string>
    <string name="my_profile">Moj profil</string>
    <string name="about">O aplikaciji</string>
    <string name="sign_out">Odjava</string>

    <!-- Archive page -->
    <string name="archiveTitle">Arhiv opravil</string>
    <string name="new_chore">Dodaj opravilo</string>
    <string name="edit_chore">Uredi opravilo</string>
    <string name="single_chore">Pregled opravila</string>
    <string name="delete_chore">Izbriši opravilo</string>
    <string name="search_archive">Poišči opravilo</string>

    <!-- Single chore preview -->
    <string name="land_preview">Zemljišče</string>

    <!-- Chores page -->
    <string name="land">Izberi zemljišče</string>
    <string name="chore_name">Ime opravila</string>
    <string name="chore_description">Opis</string>
    <string name="chore_accessories">Uporabljene snovi / pripomočki</string>
    <string name="chore_date">Datum opravila</string>
    <string name="chore_picture">Dodaj sliko</string>
    <string name="chore_picture_text">Slika</string>
    <string name="save_button">Shrani opravilo</string>

    <!-- Profile page -->
    <string name="user_email">Email </string>
    <string name="change_password">Spremeni geslo</string>
    <string name="new_password">Novo geslo </string>
    <string name="repeat_new_password">Ponovi novo geslo </string>
    <string name="user_name">Ime in priimek </string>
    <string name="user_first_name">Ime </string>
    <string name="user_last_name">Priimek </string>
    <string name="user_address">Naslov </string>
    <string name="user_post">Pošta </string>
    <string name="user_zip">Poštna številka </string>
    <string name="user_MID">GERK MID </string>
    <string name="edit_profile">Uredi profil</string>
    <string name="save_edited_profile">Shrani</string>

    <!-- Dialog strings -->
    <string name="delete_dialog_title">Odstrani opravilo</string>
    <string name="delete_dialog_description">Ste prepričani, da želite odstraniti opravilo?</string>
    <string name="dialog_yes">Potrdi</string>
    <string name="dialog_no">Prekliči</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>