<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.registration.SecondRegistrationActivity">

    <ImageView
        android:id="@+id/illustrationTop"
        android:layout_width="387dp"
        android:layout_height="436dp"
        android:layout_marginTop="-150dp"
        android:layout_marginEnd="-190dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_blob1"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/secondRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384">

        <TextView
            style="@style/loginHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/signup_title"
            android:textColor="@color/primaryTextColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:layout_marginBottom="30dp"
            android:paddingStart="3dp"
            android:text="@string/signup_subtitle3"
            android:textColor="@color/darkGray"
            android:textSize="22sp"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/signup_address_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/post_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/signup_post_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/postal_code_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/postalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginBottom="10dp"
                android:hint="@string/signup_zip_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gerk_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/gerkMID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_GERK_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/completeRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:background="@drawable/button"
            android:text="@string/signup_registerButton2_hint"
            android:textColor="@color/whiteTextColor" />

        <TextView
            android:id="@+id/goLogin"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/signup_login_hint"
            android:textAlignment="textEnd"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/darkGray" />


    </LinearLayout>

    <ImageView
        android:id="@+id/illustrationBottomLogin"
        android:layout_width="226dp"
        android:layout_height="234dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="-50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/farmer2"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/goBack"
        android:layout_width="35dp"
        android:layout_height="21dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?attr/selectableItemBackground"
        app:srcCompat="@drawable/ic_arrow_back" />

</androidx.constraintlayout.widget.ConstraintLayout>