<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome.WelcomeActivity">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043">

        <ImageView
            android:id="@+id/illustrationWelcomeTop"
            android:layout_width="wrap_content"
            android:layout_height="329dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_farm"
            tools:ignore="MissingConstraints" />

        <TextView
            style="@style/subHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/welcome_subTitle"
            android:textColor="@color/gray" />

        <TextView
            style="@style/headerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="30dp"
            android:text="@string/welcome_title"
            android:textColor="@color/primaryTextColor" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/welcome_description" />

        <Button
            android:id="@+id/cirLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:background="@drawable/button_rounded"
            android:text="@string/welcome_button"
            android:textColor="@color/whiteTextColor" />

    </LinearLayout>

    <ImageView
        android:id="@+id/illustrationBottom"
        android:layout_width="387dp"
        android:layout_height="436dp"
        android:layout_marginTop="-150dp"
        android:layout_marginEnd="-190dp"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:srcCompat="@drawable/ic_blob1"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>